<resources>
    <string name="app_name">PocketPetV2</string>

    <string name="deploy">Deploy</string>
    <string name="customize">Customize</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="pet_name">Pet Name</string>

    <string name="back_button">Back Button</string>
    <string name="select_your_pet">Select Your Pet</string>
    <string name="gator">Gator</string>
    <string name="cat">Cat</string>
    <string name="unknown">Unknown</string>
</resources>