<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/black"
        tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="16dp">

        <Button
            android:id="@+id/button_exit"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="3dp"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>
        <TextView
            android:id="@+id/main_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="16dp">

            <Button
                android:id="@+id/button_pet_name"
                android:layout_height="wrap_content"
                android:text="@string/pet_name"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="3dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="16dp">

            <Button
                android:id="@+id/button_deploy"
                android:layout_height="wrap_content"
                android:text="@string/deploy"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="3dp"/>

            <Button
                android:id="@+id/button_customize"
                android:layout_height="wrap_content"
                android:text="@string/customize"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="3dp"/>

            <Button
                android:id="@+id/button_settings"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="3dp"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>